package hockeyleague;

public enum AccreditationLevel {
	BEGINNER,
	SENIOR,
	EXPERT;
}
