package hockeyleague;

public enum Position {
	DEFENDER,
	ATTACKER,
	GOALKEEPER
}
